[gd_scene load_steps=10 format=3 uid="uid://65ax6igpeojb"]

[ext_resource type="Script" path="res://menus/shop_phase.gd" id="1_3k0ur"]
[ext_resource type="Texture2D" uid="uid://bv81mi3lydrnv" path="res://test_textures/shop_item_cards/ShopCard1.png" id="2_vio2v"]
[ext_resource type="Texture2D" uid="uid://cbos70gpogf02" path="res://test_textures/shop_item_cards/ShopCard3.png" id="3_j4rdu"]
[ext_resource type="Texture2D" uid="uid://canj7b71aae57" path="res://test_textures/HoundPiece_Icon.png" id="4_c03tn"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3au62"]
texture = ExtResource("2_vio2v")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_hlrro"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_xct2k"]
texture = ExtResource("3_j4rdu")

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_cpnbq"]
size = Vector2(128, 128)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6w6hx"]

[node name="shop_phase" type="Control"]
custom_minimum_size = Vector2(640, 350)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_3k0ur")

[node name="ShopPanel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TileMapLayer" type="TileMapLayer" parent="ShopPanel"]

[node name="ForSalePanel" type="Panel" parent="ShopPanel"]
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 32.0
offset_top = -160.0
offset_right = 448.0
offset_bottom = 160.0
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="ShopPanel/ForSalePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -152.0
offset_right = 200.0
offset_bottom = 152.0
grow_horizontal = 2
grow_vertical = 2

[node name="AbilitiesPanel" type="Control" parent="ShopPanel/ForSalePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="AbilitiesPanelTitle" type="RichTextLabel" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 56.0
offset_bottom = 20.0
theme_override_font_sizes/normal_font_size = 12
text = "abilities"
scroll_active = false

[node name="AbilitiesHBox" type="HBoxContainer" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 22.0
offset_right = 390.0
offset_bottom = 142.0

[node name="Ability1" type="Panel" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_3au62")

[node name="AbilityImage" type="Sprite2D" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability1"]
position = Vector2(46, 30)
scale = Vector2(48, 48)
texture = SubResource("PlaceholderTexture2D_hlrro")

[node name="AbilityDesc" type="RichTextLabel" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -63.0
offset_right = 33.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
text = "insert item description here lol hjsajhjsjdhj ahdj hajhsd"

[node name="BuyButton" type="Button" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.440147
anchor_top = 0.708333
anchor_right = 0.565445
anchor_bottom = 0.958333
offset_left = -0.136002
offset_top = 4.99999
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "price"
metadata/_edit_use_anchors_ = true

[node name="Ability2" type="Panel" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_3au62")

[node name="AbilityImage" type="Sprite2D" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability2"]
position = Vector2(46, 30)
scale = Vector2(48, 48)
texture = SubResource("PlaceholderTexture2D_hlrro")

[node name="AbilityDesc" type="RichTextLabel" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -63.0
offset_right = 33.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
text = "insert item description here lol hjsajhjsjdhj ahdj hajhsd"

[node name="BuyButton" type="Button" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.440147
anchor_top = 0.708333
anchor_right = 0.565445
anchor_bottom = 0.958333
offset_left = -0.136002
offset_top = 4.99999
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "price"
metadata/_edit_use_anchors_ = true

[node name="Ability3" type="Panel" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_3au62")

[node name="AbilityImage" type="Sprite2D" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability3"]
position = Vector2(46, 30)
scale = Vector2(48, 48)
texture = SubResource("PlaceholderTexture2D_hlrro")

[node name="AbilityDesc" type="RichTextLabel" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -63.0
offset_right = 33.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
text = "insert item description here lol hjsajhjsjdhj ahdj hajhsd"

[node name="BuyButton" type="Button" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.440147
anchor_top = 0.708333
anchor_right = 0.565445
anchor_bottom = 0.958333
offset_left = -0.136002
offset_top = 4.99999
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "price"
metadata/_edit_use_anchors_ = true

[node name="Ability4" type="Panel" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_3au62")

[node name="AbilityImage" type="Sprite2D" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability4"]
position = Vector2(46, 30)
scale = Vector2(48, 48)
texture = SubResource("PlaceholderTexture2D_hlrro")

[node name="AbilityDesc" type="RichTextLabel" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability4"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -63.0
offset_right = 33.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
text = "insert item description here lol hjsajhjsjdhj ahdj hajhsd"

[node name="BuyButton" type="Button" parent="ShopPanel/ForSalePanel/VBoxContainer/AbilitiesPanel/AbilitiesHBox/Ability4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.440147
anchor_top = 0.708333
anchor_right = 0.565445
anchor_bottom = 0.958333
offset_left = -0.136002
offset_top = 4.99999
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "price"
metadata/_edit_use_anchors_ = true

[node name="BuffsPanel" type="Control" parent="ShopPanel/ForSalePanel/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="BuffsPanelTitle" type="RichTextLabel" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel"]
layout_mode = 0
offset_left = 8.0
offset_top = 4.0
offset_right = 56.0
offset_bottom = 20.0
theme_override_font_sizes/normal_font_size = 12
text = "buffs
"
scroll_active = false

[node name="BuffsHBox" type="HBoxContainer" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 8.0
offset_top = 22.0
offset_right = 390.0
offset_bottom = 142.0

[node name="Buff1" type="Panel" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_xct2k")

[node name="AbilityImage" type="Sprite2D" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff1"]
position = Vector2(46, 30)
scale = Vector2(48, 48)
texture = SubResource("PlaceholderTexture2D_hlrro")

[node name="AbilityDesc" type="RichTextLabel" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff1"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -64.0
offset_right = 33.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
text = "insert item description here lol hjsajhjsjdhj ahdj hajhsd"

[node name="BuyButton" type="Button" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff1"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.440147
anchor_top = 0.708333
anchor_right = 0.565445
anchor_bottom = 0.958333
offset_left = -0.136002
offset_top = 4.99999
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "price"
metadata/_edit_use_anchors_ = true

[node name="Buff2" type="Panel" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_xct2k")

[node name="AbilityImage" type="Sprite2D" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff2"]
position = Vector2(46, 30)
scale = Vector2(48, 48)
texture = SubResource("PlaceholderTexture2D_hlrro")

[node name="AbilityDesc" type="RichTextLabel" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff2"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -64.0
offset_right = 33.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
text = "insert item description here lol hjsajhjsjdhj ahdj hajhsd"

[node name="BuyButton" type="Button" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff2"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.440147
anchor_top = 0.708333
anchor_right = 0.565445
anchor_bottom = 0.958333
offset_left = -0.136002
offset_top = 4.99999
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "price"
metadata/_edit_use_anchors_ = true

[node name="Buff3" type="Panel" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_xct2k")

[node name="AbilityImage" type="Sprite2D" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff3"]
position = Vector2(46, 30)
scale = Vector2(48, 48)
texture = SubResource("PlaceholderTexture2D_hlrro")

[node name="AbilityDesc" type="RichTextLabel" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff3"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -64.0
offset_right = 33.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
text = "insert item description here lol hjsajhjsjdhj ahdj hajhsd"

[node name="BuyButton" type="Button" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff3"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.440147
anchor_top = 0.708333
anchor_right = 0.565445
anchor_bottom = 0.958333
offset_left = -0.136002
offset_top = 4.99999
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "price"
metadata/_edit_use_anchors_ = true

[node name="Buff4" type="Panel" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_xct2k")

[node name="AbilityImage" type="Sprite2D" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff4"]
position = Vector2(46, 30)
scale = Vector2(48, 48)
texture = SubResource("PlaceholderTexture2D_hlrro")

[node name="AbilityDesc" type="RichTextLabel" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff4"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -31.0
offset_top = -64.0
offset_right = 33.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_font_sizes/normal_font_size = 8
theme_override_font_sizes/bold_font_size = 8
text = "insert item description here lol hjsajhjsjdhj ahdj hajhsd"

[node name="BuyButton" type="Button" parent="ShopPanel/ForSalePanel/VBoxContainer/BuffsPanel/BuffsHBox/Buff4"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.440147
anchor_top = 0.708333
anchor_right = 0.565445
anchor_bottom = 0.958333
offset_left = -0.136002
offset_top = 4.99999
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 10
text = "price"
metadata/_edit_use_anchors_ = true

[node name="RightsideVBox" type="VBoxContainer" parent="ShopPanel"]
layout_mode = 1
offset_left = 480.0
offset_top = 16.0
offset_right = 608.0
offset_bottom = 336.0

[node name="ShopkeeperImage" type="TextureRect" parent="ShopPanel/RightsideVBox"]
layout_mode = 2
size_flags_horizontal = 4
texture = SubResource("PlaceholderTexture2D_cpnbq")

[node name="RerollPanel" type="Panel" parent="ShopPanel/RightsideVBox"]
layout_mode = 2
size_flags_vertical = 3

[node name="RerollButton" type="Button" parent="ShopPanel/RightsideVBox/RerollPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 67.0
offset_right = 121.0
offset_bottom = 121.0
text = "reroll shop
(150)"

[node name="Panel" type="Panel" parent="ShopPanel/RightsideVBox/RerollPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 6.0
offset_right = 121.0
offset_bottom = 29.0
theme_override_styles/panel = SubResource("StyleBoxFlat_6w6hx")

[node name="ShopKeeperTextBox" type="RichTextLabel" parent="ShopPanel/RightsideVBox/RerollPanel/Panel"]
layout_mode = 0
offset_right = 112.0
offset_bottom = 23.0
theme_override_font_sizes/normal_font_size = 8
text = "test text lmao"

[node name="ExitButton" type="Button" parent="ShopPanel/RightsideVBox/RerollPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 141.0
offset_right = 121.0
offset_bottom = 166.0
text = "exit shop"

[node name="CurrencyTexture" type="TextureRect" parent="ShopPanel/RightsideVBox/RerollPanel"]
layout_mode = 0
offset_left = 67.0
offset_top = 33.0
offset_right = 99.0
offset_bottom = 61.0
texture = ExtResource("4_c03tn")
expand_mode = 2
stretch_mode = 5

[node name="CurrentPlayerCurrency" type="RichTextLabel" parent="ShopPanel/RightsideVBox/RerollPanel"]
layout_mode = 0
offset_left = 9.0
offset_top = 36.0
offset_right = 67.0
offset_bottom = 61.0
theme_override_font_sizes/bold_italics_font_size = 16
text = "200"

[connection signal="pressed" from="ShopPanel/RightsideVBox/RerollPanel/RerollButton" to="." method="_on_reroll_button_pressed"]
[connection signal="pressed" from="ShopPanel/RightsideVBox/RerollPanel/ExitButton" to="." method="_on_exit_button_pressed"]
